# supernote_pdf

./: CHANGE.md  Cargo.toml  README.md  ROADMAP_IMPLEMENTATION.md  justfile
.github/workflows/: ci.yml
src/: device_profile.rs  main.rs  parser_policy.rs
test/A5X2/: example_a5x2.note
test/A6X2/: 20250507_175227.note  20250507_230750_Proverbs7.note  20251111_201842.note  20251204_200852.note  20251207_114013.note  20251218_201227.note  20251221_113946.note  Isaiah.note
